--- a/BlueManStore/MainWindow.xaml
+++ b/BlueManStore/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BlueManStore"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Blueman Store" Height="720" Width="1280"
+        xmlns:view="clr-namespace:BlueManStore.Views" WindowStartupLocation="CenterScreen"
+        >
     <Grid>
-
+        <view:HomeView/>
     </Grid>
 </Window>
